# android-ledger-cli

./: .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  LICENSE.MIT  Makefile  README.md  build.gradle  gradle.properties  settings.gradle
.builds/: github-mirror.yml
docker/: Dockerfile
docker/scripts/: build-boost.sh  build-cmake.sh  build-gmp.sh  build-mpfr.sh  prefetch-gradle.sh
ledger/: CMakeLists.txt  LICENSE.md  build.gradle
ledger/hello/: CMakeLists.txt
ledger/jni/: CMakeLists.txt  example.cc  exceptions.cc  exceptions.h  global.cc  global.h  libledger_jni.version  session.cc
ledger/ledger_wrap/: CMakeLists.txt  LICENSE.md  README.md  build.sh
ledger/ledger_wrap/include/ledger_wrap/: forward.h  journal.h  ptr.h  session.h
ledger/ledger_wrap/src/: CMakeLists.txt  global.cc  global.h  journal.cc  session.cc
ledger/patches/: 0001-Build-libledger-as-static-library.patch  0001-Build-only-libledger.a-static-library.patch
ledger/src/androidTest/java/net/ilammy/ledger/api/: Assert.java  TestSession.java
ledger/src/main/: AndroidManifest.xml
ledger/src/main/java/net/ilammy/ledger/api/: Journal.java  Ledger.java  Session.java
ledger/src/main/java/net/ilammy/ledger/cli/: LedgerCLI.java
